--- a/chikkamagaluru.html
+++ b/chikkamagaluru.html
@@ -127,11 +127,11 @@
     <div class="other-places">
         <h2>Explore Nearby Places</h2>
         <div class="other-places-container">
-            <div class="other-place" onclick="window.location.href='chikmagalur.html'">
+            <div class="other-place" onclick="window.location.href='chikkmagalur.html'">
                 <img src="assets/ch.jpg" alt="Chikmagalur">
                 <p>Belur</p>
             </div>
-            <div class="other-place" onclick="window.location.href='halebidu.html'">
+            <div class="other-place" onclick="window.location.href='halebeedu.html'">
                 <img src="assets/hl.jpg" alt="Halebidu">
                 <p>Halebidu</p>
             </div>
@@ -139,7 +139,7 @@
                 <img src="assets/mg.jpg" alt="Mudigere">
                 <p>Mudigere</p>
             </div>
-            <div class="other-place" onclick="window.location.href='sakleshpur.html'">
+            <div class="other-place" onclick="window.location.href='sakleshpura.html'">
                 <img src="assets/sk.jpg" alt="Sakleshpur">
                 <p>Sakleshpur</p>
             </div>
