--- a/sakleshpura.html
+++ b/sakleshpura.html
@@ -27,7 +27,7 @@
             <button onclick="window.location.href='https://goo.gl/maps/Yagachi'">View on Map</button>
         </div>
         <div class="place">
-            <img src="assets/yaga.jpg" alt="Adventure Water Sports">
+            <img src="assets/yaga.jpg" alt="yagachi Water Sports">
             <h2>Adventure Water Sports</h2>
             <p>Enjoy thrilling water activities.</p>
             <button onclick="window.location.href='https://goo.gl/maps/SportsPlace'">View on Map</button>
@@ -47,19 +47,19 @@
     <div class="other-places">
         <h2>Explore Nearby Places</h2>
         <div class="other-places-container">
-            <div class="other-place" onclick="window.location.href='chikmagalur.html'">
-                <img src="assets/ch.jpg" alt="Chikmagalur">
+            <div class="other-place" onclick="window.location.href='Chikkamagaluru.html'">
+                <img src="assets/ch.jpg" alt="chikkamagaluru">
                 <p>Chikmagalur</p>
             </div>
-            <div class="other-place" onclick="window.location.href='halebidu.html'">
-                <img src="assets/hl.jpg" alt="Halebidu">
+            <div class="other-place" onclick="window.location.href='halebeedu.html'">
+                <img src="assets/hl.jpg" alt="Halebeedu">
                 <p>Halebidu</p>
             </div>
             <div class="other-place" onclick="window.location.href='mudigere.html'">
                 <img src="assets/mg.jpg" alt="Mudigere">
                 <p>Mudigere</p>
             </div>
-            <div class="other-place" onclick="window.location.href='sakleshpur.html'">
+            <div class="other-place" onclick="window.location.href='sakleshpura.html'">
                 <img src="assets/sk.jpg" alt="Sakleshpur">
                 <p>Belur</p>
             </div>
