--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta property="og:title" content="Bettadakeshvi Homestay" />
     <meta property="og:description" content="A beautiful holiday destination for relaxation and adventure." />
     <meta property="og:image" content="/-----homestay/assets/og-image.jpg" />
-    <meta property="og:url" content="https://bettadakeshvi1.github.io/repository-name/" />
+    <meta property="og:url" content="https://bettadakeshvi1.github.io/-----homestay/" />
   
     <!-- Twitter Card Meta Tags (for Twitter sharing) -->
     <meta name="twitter:card" content="summary_large_image" />
