--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     <link rel="stylesheet" href="style.css" />
     
     <!-- Favicon and Apple Touch Icon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/-----homestay/assets/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/-----homestay/assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/-----homestay/assets/favicon-16x16.png">
-    <link rel="manifest" href="/-----homestay/assets/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://bettadakeshvi1.github.io/-----homestay/assets/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="https://bettadakeshvi1.github.io/-----homestay/assets/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="https://bettadakeshvi1.github.io/-----homestay/assets/favicon-16x16.png"/>
+    <link rel="manifest" href="https://bettadakeshvi1.github.io/-----homestay/assets/site.webmanifest"/>
+    <link rel="shortcut icon" href="https://bettadakeshvi1.github.io/-----homestay/assets/favicon.ico" />
+
   
     <title>Bettadakeshvi Homestay | Holiday destination</title>
     
