--- a/index.html
+++ b/index.html
@@ -21,15 +21,26 @@
     <link rel="icon" type="image/png" sizes="16x16" href="https://bettadakeshvi1.github.io/-----homestay/assets/favicon-16x16.png"/>
     <link rel="manifest" href="https://bettadakeshvi1.github.io/-----homestay/assets/site.webmanifest"/>
     <link rel="shortcut icon" href="https://bettadakeshvi1.github.io/-----homestay/assets/favicon.ico" />
-
-  
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "url": "https://www.bettadakeshvihomestay.com/",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://bettadakeshvi1.github.io/-----homestay/search?q={search_term_string}",
+          "query-input": "required name=search_term_string"
+        },
+        "favicon": "https://bettadakeshvi1.github.io/-----homestay/assets/favicon.ico"
+      }
+      </script>
     <title>Bettadakeshvi Homestay | Holiday destination</title>
     
     <!-- Open Graph Meta Tags (for social sharing) -->
     <meta property="og:title" content="Bettadakeshvi Homestay" />
     <meta property="og:description" content="A beautiful holiday destination for relaxation and adventure." />
     <meta property="og:image" content="/-----homestay/assets/og-image.jpg" />
-    <meta property="og:url" content="https://bettadakeshvi1.github.io/-----homestay/" />
+    <meta property="og:url" content="https://www.bettadakeshvihomestay.com/" />
   
     <!-- Twitter Card Meta Tags (for Twitter sharing) -->
     <meta name="twitter:card" content="summary_large_image" />
