commit the adreess of fevicon change

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <!-- Favicon and Apple Touch Icon -->
     <link rel="icon" type="image/png" sizes="32x32" href="https://bettadakeshvi1.github.io/-----homestay/assets/favicon-32x32.png"/>
     <link rel="icon" type="image/png" sizes="16x16" href="https://bettadakeshvi1.github.io/-----homestay/assets/favicon-16x16.png"/>
-    <link rel="icon" type="image/png" href="/https://bettadakeshvi1.github.io/-----homestay/assets/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/https://bettadakeshvi1.github.io/-----homestay/assets/favicon.svg" />
-    <link rel="shortcut icon" href="/https://bettadakeshvi1.github.io/-----homestay/assets/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/https://bettadakeshvi1.github.io/-----homestay/assets/apple-touch-icon.png" />
-    <link rel="manifest" href="/https://bettadakeshvi1.github.io/-----homestay/assets/site.webmanifest" />
+    <link rel="icon" type="image/png" href="https://bettadakeshvi1.github.io/-----homestay/assets/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="https://bettadakeshvi1.github.io/-----homestay/assets/favicon.svg" />
+    <link rel="shortcut icon" href="https://bettadakeshvi1.github.io/-----homestay/assets/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://bettadakeshvi1.github.io/-----homestay/assets/apple-touch-icon.png" />
+    <link rel="manifest" href="https://bettadakeshvi1.github.io/-----homestay/assets/site.webmanifest" />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
