--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="style.css" />
     
     <!-- Favicon and Apple Touch Icon -->
+    <meta name="apple-mobile-web-app-title" content="Bettadakeshvi Homestay" />
     <link rel="icon" type="image/png" sizes="32x32" href="https://bettadakeshvi1.github.io/-----homestay/assets/favicon-32x32.png"/>
     <link rel="icon" type="image/png" sizes="16x16" href="https://bettadakeshvi1.github.io/-----homestay/assets/favicon-16x16.png"/>
     <link rel="icon" type="image/png" href="https://bettadakeshvi1.github.io/-----homestay/assets/favicon-96x96.png" sizes="96x96" />
